--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,19 @@ ul {
   line-height: 1.5;
 }
 
-.testimonial-info {
+.testimonial-info-container {
   height: 100%;
-
+  width: 100%;
   display: flex;
-  justify-content: center;
   align-items: end;
+  justify-content: start;
+}
+
+.testimonial-info {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+
   gap: 0.75rem;
 }
 
@@ -161,6 +168,8 @@ ul {
   .testimonial-info {
     flex-direction: column;
     align-items: start;
+    justify-content: end;
+    width: 100%;
   }
 }
 
